Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.15.7, 6.2.2, 6.3.0 Feature Freeze
-
Fix Version/s: 5.15.9, 6.2.3, 6.3.0 Alpha, 6.4.0 Beta1
-
Component/s: Widgets: Widgets and Dialogs
-
Labels:
-
Commits:0462d24dcd (qt/qtbase/dev) 0462d24dcd (qt/tqtc-qtbase/dev) d0b5adb3b2 (qt/qtbase/6.2) a015985490 (qt/qtbase/6.3) d0b5adb3b2 (qt/tqtc-qtbase/6.2) a015985490 (qt/tqtc-qtbase/6.3) 3045196fba (qt/tqtc-qtbase/5.15)
Description
When opening a QMenu and right clicking on a widget within the menu to open context menu the context menu position provided by QWidget::customContextMenuRequested doesn't seem to be mapped to the widget coordinates => the position is way off and using it to position a context menu doesn't yield very good results.
Steps to reproduce the problem:
- run the attached example.
- Click on "press here" button
- Right click anywhere on "tab1" or "tab2" white rectangle. The effect is clearer the further the click is from the upper left corner of the window.